--- a/trunk/Assignment 1/res/layout/helpscreen.xml
+++ b/trunk/Assignment 1/res/layout/helpscreen.xml
@@ -2,7 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
     android:background="@drawable/help"
     android:orientation="horizontal" >
-	    
+
+      <Button
+          android:id="@+id/btn_back"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:layout_alignParentLeft="true"
+          android:background="@drawable/button_back" />
+
 </RelativeLayout>
