--- a/trunk/Assignment 1/res/layout/mainmenu.xml
+++ b/trunk/Assignment 1/res/layout/mainmenu.xml
@@ -8,23 +8,31 @@
     android:orientation="horizontal" >
 
     <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="94dp"
-        android:layout_marginRight="54dp"
-        android:background="@drawable/button_start" />
-
-    <Button
         android:id="@+id/btn_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_start"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
+        android:layout_alignBaseline="@+id/btn_option"
+        android:layout_alignBottom="@+id/btn_option"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="55dp"
         android:background="@drawable/button_help" />
+
+    <Button
+        android:id="@+id/btn_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btn_option"
+        android:layout_alignBottom="@+id/btn_option"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_start" />
+
+    <Button
+        android:id="@+id/btn_option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/button_options" />
 	    
 </RelativeLayout>
 
