--- a/Assignment 1/res/layout/optionscreen.xml
+++ b/Assignment 1/res/layout/optionscreen.xml
@@ -7,20 +7,56 @@
     android:background="@drawable/optionsbng"
     android:orientation="horizontal" >
 
-      <Button
-          android:id="@+id/btn_back"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentLeft="true"
-          android:background="@drawable/button_back" />
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/button_back" />
 
-      <SeekBar
-          android:id="@+id/seekBar1"
-          android:layout_width="200dp"
-          android:layout_height="wrap_content"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="86dp" />
+    <SeekBar
+        android:id="@+id/seekBar1"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="86dp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="61dp"
+        android:layout_toLeftOf="@+id/seekBar1"
+        android:text="Volume" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_back"
+        android:layout_alignLeft="@+id/textView1"
+        android:text="Difficulty" />
+
+    <RadioButton
+        android:id="@+id/radioButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignRight="@+id/seekBar1"
+        android:text="Normal" />
+
+    <RadioButton
+        android:id="@+id/radioButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/radioButton1"
+        android:layout_alignBottom="@+id/radioButton1"
+        android:layout_marginRight="16dp"
+        android:layout_toLeftOf="@+id/radioButton1"
+        android:text="Easy" />
 
 </RelativeLayout>
