--- a/trunk/Assignment 1/res/layout/optionscreen.xml
+++ b/trunk/Assignment 1/res/layout/optionscreen.xml
@@ -60,7 +60,30 @@
          android:layout_height="wrap_content"
          android:text="Normal" />
  </RadioGroup>
- 
- 
+
+     <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="18sp" />
+
+     <com.facebook.widget.LoginButton
+         android:id="@+id/fb_login_button"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentTop="true" />
+
+     <Button
+         android:id="@+id/btn_FB"
+         android:layout_width="100dp"
+         android:layout_height="100dp"
+         android:layout_alignTop="@+id/Diffuculty"
+         android:layout_marginLeft="26dp"
+         android:layout_marginTop="12dp"
+         android:layout_toRightOf="@+id/seekBar1"
+         android:background="@drawable/fbicon" />
 
 </RelativeLayout>
